@@ -23,4 +23,7 @@ PINCodeViewControllerDelegate
 // access core data stores
 + (NSManagedObjectContext *)managedObjectContext;
 
+// if you call this i will kill you
+- (void)dismissModalViewController;
+
 @end
