@@ -1,3 +1,8 @@
+# 2012-3-26
+
+- Fixed usability issues with PIN code and security questions
+- Last thing remaining is the PIN code reset
+
 # 2012-3-23
 
 - Security questions to assist in passcode reset
